# pyttt

./: .gitignore  .gitmodules  README.md  example.py  notes.md  pyproject.toml  requirements.txt  scent.py  test.py  tic_tac_toe_multi_dimensional.ipynb  tic_tac_toe_multi_dimensional_version_2.ipynb  tic_tac_toe_scratch.ipynb  tic_tac_toe_scratch_3x3.ipynb  tic_tac_toe_ultimate.ipynb  ttt.py  ttt_d.py  ultimate_ttt.py
docs/: notes.md
iuttt/: __init__.py  board.py  board_state.py  game.py  position.py
old/: cart.py  document.py  state_note.ipynb  tic_tac_toe_ultimate.ipynb
pyttt/: __init__.py  board.py  board_state.py  board_strategy.py  game.py  game_state.py  player.py  utils.py
tests/: test_board.py  test_game.py  test_position.py
