[project]
name = "pyttt"
version = "0.1.0"
description = "Tic-Tac-Toe in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "build>=1.2.2.post1",
    "numpy>=2.3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
    "macfsevents>=0.8.4",
    "pynose>=1.5.4",
    "pprintpp>=0.4.0",
]

[tool.ruff]
exclude = [
    "scent.py",
]

[tool.ruff.lint]
ignore = ["E731", "F401"]
